docs(hero): rails - update the alt text to match image

--- a/docs/app/views/examples/components/hero/_preview.html.erb
+++ b/docs/app/views/examples/components/hero/_preview.html.erb
@@ -98,7 +98,7 @@
   title: "Introducing the Kajabi template store",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   size: "small",
   contained: true,
 } do %>
@@ -118,7 +118,7 @@
   title: "Introducing the Kajabi template store",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   size: "large",
   contained: true,
 } do %>
@@ -138,7 +138,7 @@
   title: "Introducing the Kajabi template store",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   size: "small",
   contained: true,
   cta_attributes: {
@@ -162,7 +162,7 @@
   title: "Introducing the Kajabi template store",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   borderless: true,
   custom_background_color: "#e6f4fe",
   size: "small",
@@ -237,7 +237,7 @@
   title: "Learn with Kajabi in our live workshops",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   size: "small",
   image_start: true,
   contained: true,
@@ -258,7 +258,7 @@
   title: "Learn with Kajabi in our live workshops",
   description: "Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account.",
   image: "hero-contained-placeholder.png",
-  alt_text: "Multi-layered illustration of UI elements and woman clasping her hands together in excitement",
+  alt_text: "Multi layered illustration of UI elements and woman smiling to the camera",
   size: "large",
   image_start: true,
   contained: true,
