--- a/docs/app/views/examples/components/hero/_preview.html.erb
+++ b/docs/app/views/examples/components/hero/_preview.html.erb
@@ -2,7 +2,7 @@
 <p>Full-bleed images within Heroes take up the entire vertical and horizontal space allocated at the start or end of the Hero component.</p>
 
 <h3>Default - Small</h3>
-<p>The default small Hero component takes up a portion of the viewport width.</p>
+<p>The small Hero component takes up a portion of the viewport width and image fills the space within the container.</p>
 
 <%= sage_component SageHero, {
   title: "Learn with Kajabi in our live workshops",
@@ -22,7 +22,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Default - Large</h3>
-<p>The default large Hero component takes up the entire viewport width.</p>
+<p>The default large Hero component takes up the entire viewport width and image fills the space within the container.</p>
 
 <%= sage_component SageHero, {
   title: "Learn with Kajabi in our live workshops",
@@ -40,7 +40,7 @@
 <% end %>
 
 <h3>Image has a trigger</h3>
-<p>When the image has a trigger, the image is clickable and will trigger an action.</p>
+<p>When the image has a trigger, the image is clickable, will trigger an action, and image fills the space within the container.</p>
 
 <%= sage_component SageHero, {
   title: "Learn with Kajabi in our live workshops",
@@ -64,7 +64,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Borderless and custom background color</h3>
-<p>When the Hero is set to borderless and has a custom background color, the Hero will have no border and the background color will be applied to the entire Hero.</p>
+<p>When the Hero is set to borderless and has a custom background color, the Hero will have no border and the background color will be applied to the entire Hero. The image will fill the space within the container.</p>
 
 <%= sage_component SageHero, {
   title: "Learn with Kajabi in our live workshops",
