--- a/packages/sage-assets/lib/stylesheets/components/_modal.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_modal.scss
@@ -347,3 +347,120 @@ $-modal-inner-size: sage-container(md);
     transition: none;
   }
 }
+
+
+$-modal-fixed-fullscreen-top-spacing: 8rem;
+$-modal-fixed-fullscreen-column-top-spacing: rem(60px);
+$-modal-fixed-fullscreen-column-height: rem(74px);
+$-modal-fixed-column-offset: 14rem;
+$-modal-fixed-fullscreen-column-scroll-height: rem(140px);
+
+$-modal-scrollable-cols-sidebar-width: 36%;
+$-modal-scrollable-cols-preview-width: 919px;
+$-modal-scrollable-cols-preview-visible-breakpoint: 1359px;
+$-modal-scrollable-cols-mobile-fixed-column-padding-top: rem(32px);
+
+$-modal-scrollable-cols-xsmall-mobile-fixed-column-padding-top: rem(90px);
+
+.modal-scrollable-cols__modal {
+  .sage-modal__header {
+    box-shadow: sage-shadow(md);
+    margin: 0;
+    padding: rem(12px) 0;
+    position: relative;
+    border-start-start-radius: sage-spacing(sm);
+    border-start-end-radius: sage-spacing(sm);
+    z-index: 2;
+  }
+
+  .sage-modal__header-text {
+    padding: sage-spacing(2xs) sage-spacing(md);
+
+    > {
+      .sage-card__row {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  .sage-modal__content {
+    margin: 0;
+  }
+
+  .modal-scrollable-cols__fixed-column {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: calc(100vh - #{$-modal-fixed-column-offset});
+    background-color: #ffffff;
+  }
+
+  .modal-scrollable-cols__fixed-column-scroll {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow: scroll;
+    height: 100%;
+    padding: sage-spacing(sm);
+  }
+}
+
+.modal-scrollable-cols__sidebar {
+  flex-grow: 0;
+  flex-basis: $-modal-scrollable-cols-sidebar-width;
+  overflow-y: auto;
+  background-color: sage-color(white);
+  position: relative;
+  z-index: 2;
+  border-block-start: sage-border(default);
+  border-inline-end: sage-border(default);
+  box-shadow: 6px 0 7px -6px rgba(sage-color(black), 0.16);
+
+  &.modal-scrollable-cols__fixed-column {
+    border-end-start-radius: sage-spacing(sm);
+    // background: blue;
+  }
+}
+
+.modal-scrollable-cols__preview {
+  // background-image: url(../../images/system/dot.png);
+
+  &.modal-scrollable-cols__fixed-column {
+    // background: red;
+    border-end-end-radius: sage-spacing(sm);
+  }
+
+  .modal-scrollable-cols__fixed-column-scroll {
+    padding: sage-spacing(xl);
+  }
+}
+
+// TODO: update to use image and not icon
+.modal-scrollable-cols-header-text {
+  border-left: sage-border();
+  min-width: 0;
+  padding-left: sage-spacing(sm);
+
+  @media (max-width: sage-breakpoint(sm-max)) {
+    padding-left: sage-spacing(xs);
+  }
+
+  h1 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  img {
+    max-width: 40px;
+  }
+}
+
+.modal-scrollable-cols-header-content {
+  width: 100%;
+}
+
+.modal-scrollable-cols-header-actions {
+  flex-shrink: 0;
+}
