style(modal): add quotes to backgroundimage

--- a/packages/sage-assets/lib/stylesheets/components/_modal.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_modal.scss
@@ -424,7 +424,7 @@ $-modal-scrollable-cols-xsmall-mobile-fixed-column-padding-top: rem(90px);
 }
 
 .modal-scrollable-cols__preview {
-  // background-image: url(../../images/system/dot.png);
+  background-image: url('../../images/system/dot.png');
 
   &.modal-scrollable-cols__fixed-column {
     // background: red;
