--- a/packages/sage-assets/lib/stylesheets/components/_sortable.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sortable.scss
@@ -23,7 +23,7 @@ $-sortable-image-height: rem(48px);
   cursor: grab;
 
   &::before {
-    @include sage-icon-base(handle);
+    @include sage-icon-base(handle-2-vertical);
     padding: 0;
     color: sage-color(charcoal, 100);
   }
