--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -105,6 +105,7 @@ $sage-icons: (
   circle-9: unicode(e93c),
   clock: unicode(e93d),
   closed-captions: unicode(e93e),
+  cloud-upload: unicode(ea06),
   code: unicode(e93f),
   color: unicode(e940),
   columns: unicode(e941),
@@ -146,10 +147,13 @@ $sage-icons: (
   file-money: unicode(e960),
   filter: unicode(e961),
   flag: unicode(e962),
+  flash: unicode(ea07),
+  flash-filled: unicode(ea08),
   folder: unicode(e963),
   folder-group: unicode(e964),
   form: unicode(e965),
   form-field: unicode(e966),
+  form-filled: unicode(ea09),
   fullscreen: unicode(e967),
   funnel: unicode(e9ea),
   gear: unicode(e968),
@@ -159,6 +163,7 @@ $sage-icons: (
   handle-2: unicode(e96c),
   handle-2-vertical: unicode(e96d),
   hashtag: unicode(e96e),
+  hd-video: unicode(ea0a),
   heading-large: unicode(e96f),
   heading-small: unicode(e970),
   headset: unicode(e971),
@@ -198,6 +203,7 @@ $sage-icons: (
   logo-youtube: unicode(e9fa),
   loop: unicode(e98a),
   mail: unicode(e98b),
+  map: unicode(ea0b),
   mapped: unicode(e98c),
   margin-left: unicode(e98d),
   margin-right: unicode(e98e),
@@ -301,6 +307,7 @@ $sage-icons: (
   warning-filled: unicode(e9e2),
   window-paragraph: unicode(e9e3),
   world: unicode(e9e4),
+  wrench: unicode(ea0c)
 );
 
 ///
