fix(icons): add additional icon theme-store-filled

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -282,6 +282,7 @@ $sage-icons: (
   tag-filled: unicode(e9ce),
   text-styles: unicode(e9f4),
   theme-store: unicode(e9cf),
+  theme-store-filled: unicode(ea0d),
   thumb-down: unicode(e9f5),
   thumb-down-filled: unicode(e9f6),
   thumb-up: unicode(e9f7),
