fix(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -65,6 +65,7 @@ $sage-icons: (
   bank: unicode(e914),
   bell: unicode(e915),
   blog: unicode(e916),
+  blog-filled: unicode(ea0f),
   bold: unicode(e917),
   broadcast: unicode(e918),
   calendar-date: unicode(e919),
@@ -203,6 +204,7 @@ $sage-icons: (
   logo-youtube: unicode(e9fa),
   loop: unicode(e98a),
   mail: unicode(e98b),
+  mail-filled: unicode(ea10),
   map: unicode(ea0b),
   mapped: unicode(e98c),
   margin-left: unicode(e98d),
@@ -238,6 +240,7 @@ $sage-icons: (
   play-outline: unicode(e9a7),
   play-store: unicode(ea01),
   plug: unicode(e9a8),
+  premium: unicode(ea0e),
   present: unicode(e9a9),
   preview-off: unicode(e9aa),
   preview-on: unicode(e9ab),
