--- a/packages/sage-assets/lib/stylesheets/components/_nav.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_nav.scss
@@ -25,7 +25,7 @@ $-nav-subitem-border-width: rem(2px);
 }
 
 .sage-nav__link {
-  @extend %t-sage-heading-6;
+  @extend %t-sage-body-med;
 }
 
 .sage-nav__link,
@@ -40,7 +40,7 @@ $-nav-subitem-border-width: rem(2px);
 
   display: flex;
   align-items: center;
-  padding: rem(10px) rem(12px);
+  padding: rem(4px) rem(12px);
   margin-bottom: sage-spacing(2xs);
   text-decoration: none;
   color: $-nav-color-text;
@@ -59,7 +59,7 @@ $-nav-subitem-border-width: rem(2px);
 }
 
 .sage-nav__link--sub {
-  @extend %t-sage-body-small-semi;
+  @extend %t-sage-body-small-med;
 
   &.sage-nav__link--active {
     @include sage-focus-outline--update-color(sage-color(primary, 200));
@@ -115,6 +115,6 @@ $-nav-subitem-border-width: rem(2px);
 
 .sage-nav__list--sub-with-icon {
   margin-left: calc((#{sage-spacing(sm)} + (#{$-nav-icon-size} / 2)) - (#{$-nav-subitem-border-width} / 2) - (#{$-nav-icon-spacing} / 2));
-  padding-left: sage-spacing();
+  padding-left: sage-spacing(sm);
   border-left: $-nav-subitem-border-width solid sage-color(grey, 400);
 }
