--- a/docs/lib/sage_rails/app/views/sage_components/_sage_nav_link.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_nav_link.html.erb
@@ -22,7 +22,7 @@ attributes = component.attributes.present? ? component.attributes : {}
 %>
 <%= link_to component.link, method: component.method, class: "sage-nav__link #{active_class} #{component_class} #{nav_link_icon_class}", **attributes do %>
   <% if component.icon %>
-    <i class="sage-icon-<%= component.icon %>-lg sage-nav__icon"></i>
+    <i class="sage-icon-<%= component.icon %> sage-nav__icon"></i>
   <% end %>
   <span class="sage-nav__label">
     <%= component.text %>
