style(progress): make width transition when value changes after page load

--- a/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
@@ -54,6 +54,7 @@ $-progress-bar-height: sage-spacing(xs);
 
 .sage-progress-bar__animate {
   animation: 3s sage-progress-bar--slide ease;
+  transition: 1s width ease;
 }
 
 .sage-progress-bar__element {
