style(progress): make width transition when value changes after page … (#1861)
* style(progress): make width transition when value changes after page load

* style(progress): update order for linter

--- a/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
@@ -53,6 +53,7 @@ $-progress-bar-height: sage-spacing(xs);
 }
 
 .sage-progress-bar__animate {
+  transition: 1s width ease;
   animation: 3s sage-progress-bar--slide ease;
 }
 
