chore(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -43,6 +43,7 @@ $sage-icons: (
   add-circle: unicode(e902),
   add-image: unicode(e903),
   add-small: unicode(e904),
+  advanced: unicode(ea11),
   ai-sparkle: unicode(ea02),
   ai-writer: unicode(e91d),
   ai-writer-filled: unicode(e9fb),
@@ -120,6 +121,8 @@ $sage-icons: (
   creator-studio: unicode(e9ed),
   creator-studio-filled: unicode(e9ee),
   credit-card: unicode(e949),
+  cursor: unicode(ea12),
+  cursor-pointer: unicode(ea13),
   custom-field: unicode(e94a),
   customize: unicode(e94b),
   danger: unicode(e94c),
@@ -133,6 +136,8 @@ $sage-icons: (
   download: unicode(e954),
   downsell: unicode(e955),
   draft: unicode(e956),
+  drawer-collapse: unicode(ea14),
+  drawer-expand: unicode(ea15),
   drop: unicode(e957),
   duplicate: unicode(e958),
   editor: unicode(e9ef),
@@ -183,6 +188,7 @@ $sage-icons: (
   italic: unicode(e97b),
   kajabi: unicode(e97c),
   kajabi-filled: unicode(e97d),
+  klarna: unicode(ea16),
   lab: unicode(e97e),
   launch: unicode(e97f),
   layout-grid: unicode(e980),
@@ -205,6 +211,7 @@ $sage-icons: (
   loop: unicode(e98a),
   mail: unicode(e98b),
   mail-filled: unicode(ea10),
+  mail-open: unicode(ea17),
   map: unicode(ea0b),
   mapped: unicode(e98c),
   margin-left: unicode(e98d),
@@ -225,6 +232,7 @@ $sage-icons: (
   move-right: unicode(e99a),
   multi-pay: unicode(e99b),
   newsletter: unicode(e99c),
+  newsletter-2: unicode(ea19),
   "null": "",
   one-off-session: unicode(e99d),
   one-time: unicode(e99e),
@@ -235,6 +243,7 @@ $sage-icons: (
   pen: unicode(e9a2),
   phone-portrait: unicode(e9a3),
   phone-toolbar: unicode(e9a4),
+  phone-toolbar-filled: unicode(ea1a),
   play: unicode(e9a5),
   play-circle: unicode(e9a6),
   play-outline: unicode(e9a7),
