fix(modal): move scrollbars to the edge of the container when scrollable
* style(modal): use padding instead of margin to move scrollbars away from content

* style(modal): update order of props

* style(modal): remove overflow hidden

--- a/packages/sage-assets/lib/stylesheets/components/_modal.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_modal.scss
@@ -268,8 +268,8 @@ $-modal-inner-size: sage-container(md);
   .sage-modal--scrollable & {
     @include overflow-scroll(y);
 
-    margin-top: 0;
-    padding: sage-spacing(xs) sage-spacing(3xs);
+    padding: sage-spacing(xs) sage-spacing(md) sage-spacing(md);
+    margin: 0;
 
     > :first-child {
       margin-top: sage-spacing(xs);
