chore(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -43,6 +43,7 @@ $sage-icons: (
   add-circle: unicode(e902),
   add-image: unicode(e903),
   add-small: unicode(e904),
+  add-square: unicode(e970),
   advanced: unicode(ea11),
   ai-sparkle: unicode(ea02),
   ai-writer: unicode(e91d),
@@ -65,10 +66,12 @@ $sage-icons: (
   ban: unicode(e913),
   bank: unicode(e914),
   bell: unicode(e915),
+  block: unicode(ea18),
   blog: unicode(e916),
   blog-filled: unicode(ea0f),
   bold: unicode(e917),
   broadcast: unicode(e918),
+  button: unicode(ea1b),
   calendar-date: unicode(e919),
   calendar-schedule: unicode(e91a),
   calendar-simple: unicode(e91b),
@@ -109,6 +112,7 @@ $sage-icons: (
   closed-captions: unicode(e93e),
   cloud-upload: unicode(ea06),
   code: unicode(e93f),
+  code-block: unicode(ea1c),
   color: unicode(e940),
   columns: unicode(e941),
   comment: unicode(e942),
@@ -155,6 +159,7 @@ $sage-icons: (
   flag: unicode(e962),
   flash: unicode(ea07),
   flash-filled: unicode(ea08),
+  floppy-disk: unicode(ea1d),
   folder: unicode(e963),
   folder-group: unicode(e964),
   form: unicode(e965),
@@ -170,8 +175,14 @@ $sage-icons: (
   handle-2-vertical: unicode(e96d),
   hashtag: unicode(e96e),
   hd-video: unicode(ea0a),
+  heading-1: unicode(ea1e),
+  heading-2: unicode(ea1f),
+  heading-3: unicode(ea20),
+  heading-4: unicode(ea21),
+  heading-5: unicode(ea22),
+  heading-6: unicode(ea23),
   heading-large: unicode(e96f),
-  heading-small: unicode(e970),
+  heading-small: unicode(ea24),
   headset: unicode(e971),
   help: unicode(e972),
   help-filled: unicode(e973),
@@ -310,6 +321,7 @@ $sage-icons: (
   user: unicode(e9d8),
   user-circle: unicode(e9d9),
   user-circle-filled: unicode(e9da),
+  user-filled: unicode(ea25),
   user-star: unicode(e9db),
   user-star-filled: unicode(e9dc),
   users: unicode(e9dd),
