--- a/docs/app/views/examples/components/dynamic_select/_preview.html.erb
+++ b/docs/app/views/examples/components/dynamic_select/_preview.html.erb
@@ -1,3 +1,10 @@
+<%= sage_component SageAlert, {
+  color: "warning",
+  title: "Deprecated",
+  desc:  "Dynamic Select is deprecated and no longer recommended. Please reach out for #{link_to "support or any questions", "/pages/support"}.".html_safe,
+  icon_name: "sage-icon-danger-filled",
+} %>
+
 <h3>Working with the<code>Sage Dynamic Select Input (Select2)</code></h3>
 <p>
   The dynamic select input is a sagified version of the select2 input that resides in <code>Kajabi Products.</code> The input fuctionality leverages the Javascript library select2 and includes several options for tailoring the input to the UI. The input can retrieve options from any arbitrary API that will return validly structured JSON.<br/> <br/> Basic usage and complete documentation ca be found
