chore(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -108,6 +108,7 @@ $sage-icons: (
   circle-7: unicode(e93a),
   circle-8: unicode(e93b),
   circle-9: unicode(e93c),
+  circle-dashed: unicode(ea26),
   clock: unicode(e93d),
   closed-captions: unicode(e93e),
   cloud-upload: unicode(ea06),
@@ -218,6 +219,7 @@ $sage-icons: (
   logo-linkedin: unicode(e9e7),
   logo-tiktok: unicode(e9e8),
   logo-twitter: unicode(e9e9),
+  logo-twitter-x: unicode(ea29),
   logo-youtube: unicode(e9fa),
   loop: unicode(e98a),
   mail: unicode(e98b),
@@ -276,6 +278,8 @@ $sage-icons: (
   reset-password: unicode(e9b5),
   restore: unicode(e9b6),
   right-small: unicode(e9b7),
+  rocket: unicode(ea27),
+  rocket-filled: unicode(ea28),
   round-dollar: unicode(e9b8),
   rows: unicode(e986),
   scissor: unicode(e9fd),
@@ -332,7 +336,7 @@ $sage-icons: (
   warning-filled: unicode(e9e2),
   window-paragraph: unicode(e9e3),
   world: unicode(e9e4),
-  wrench: unicode(ea0c)
+  wrench: unicode(ea0c),
 );
 
 ///
