style(): remove comma

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -336,7 +336,7 @@ $sage-icons: (
   warning-filled: unicode(e9e2),
   window-paragraph: unicode(e9e3),
   world: unicode(e9e4),
-  wrench: unicode(ea0c),
+  wrench: unicode(ea0c)
 );
 
 ///
