feat(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -117,6 +117,7 @@ $sage-icons: (
   color: unicode(e940),
   columns: unicode(e941),
   comment: unicode(e942),
+  comment-no: unicode(ea2a),
   connect: unicode(e943),
   contact: unicode(e944),
   conversation: unicode(e945),
@@ -241,6 +242,8 @@ $sage-icons: (
   microphone-off: unicode(e996),
   monitor: unicode(e997),
   monitor-filled: unicode(e998),
+  more-menu: unicode(ea2b),
+  more-menu-filled: unicode(ea2c),
   move-left: unicode(e999),
   move-right: unicode(e99a),
   multi-pay: unicode(e99b),
