feat: add pine icons to sage

--- a/docs/app/views/examples/components/icon/_preview.html.erb
+++ b/docs/app/views/examples/components/icon/_preview.html.erb
@@ -12,6 +12,7 @@
   <%= sage_component SageIcon, { icon: "pen", label: "Edit", color: "primary-300" } %>
   <%= sage_component SageIcon, { icon: "preview-on", label: "Preview", color: "sage-300" } %>
   <%= sage_component SageIcon, { icon: "trash", label: "Delete", color: "red-300" } %>
+  <pds-icon icon="trash" color="#006699"></pds-icon>
 </div>
 
 <%= sage_component SageDivider, {} %>
