--- a/docs/app/views/application/_app_head_content.html.erb
+++ b/docs/app/views/application/_app_head_content.html.erb
@@ -16,3 +16,5 @@
 <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
 <%= csrf_meta_tags %>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@pine-ds/core/dist/pine-core/pine-core.esm.js"></script>
+<script nomodule src="https://cdn.jsdelivr.net/npm/@pine-ds/core/dist/pine-core/index.esm.js"></script>
