--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -434,7 +434,7 @@ $-btn-loading-min-height: rem(36px);
     padding-right: calc(1rem + #{$-btn-disclosure-left-padding});
 
     &::after {
-      @include sage-icon-base(caret-down, md);
+      @include sage-icon-base(caret-down, md, pine);
 
       position: absolute;
       right: 1rem;
@@ -449,6 +449,10 @@ $-btn-loading-min-height: rem(36px);
 
     &[class*="icon-only"].sage-btn--small::after {
       right: rem(12px);
+    }
+
+    &:has(pds-icon) {
+      padding-right: $-btn-base-padding-inline;
     }
   }
 
@@ -779,6 +783,10 @@ a.sage-btn {
     &:not(:focus):hover::after {
       background-color: transparent;
     }
+  }
+
+  &:has(pds-icon) {
+    z-index: 1;
   }
 }
 
