fix(avatar): add styles for pds-icon

--- a/packages/sage-assets/lib/stylesheets/components/_avatar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_avatar.scss
@@ -164,7 +164,8 @@ $-avatar-group-item-sizes: (
     background-color: var(--badge-custom-bg-color);
   }
 
-  i {
+  i,
+  pds-icon {
     display: flex;
   }
 
